wikijs/wiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
        - image: requarks/wiki:2.5.301
          name: wiki
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 10m
