wikijs/wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: wiki
