wikijs/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: public
  tls:
    - hosts:
        - wiki.rana.cloud
      secretName: wiki-ingress-tls
  rules:
    - host: wiki.rana.cloud
      http:
        paths:
          - path: /
            backend:
              service:
                name: wiki
                port:
                  number: 3000
            pathType: Prefix
